fixed uneven button sizes in nav drawer, fixed create poster form for mobile, made changes too how footer works

--- a/src/components/PDF/PDF.css
+++ b/src/components/PDF/PDF.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   display: table;
-  margin: 0 auto;
+  margin: 0;
   padding-bottom: 10px;
   display: flex;
   flex-direction: column;
@@ -44,8 +44,4 @@
 
 .pdf__logo {
   font-size: 100px;
-}
-
-.pdf-button {
-  margin-bottom: 80px;
 }
